# holani-debug

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: core_runner.rs  main.rs
src/debugger/: breakpoints.rs  disassembler.rs  hex_input.rs  mod.rs  session.rs  settings.rs  timers.rs  watches.rs
