[package]
name = "holani-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
holani = { git = "https://github.com/LLeny/holani.git", rev = "2ec15f8e7101d9d107e41d4280aed4f6ee65c54c" }
bitflags = "2.6.0"
env_logger = { version = "0.11.5", default-features = false, features = [ "auto-color", "humantime", ] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
governor = "0.6"
kanal = { git = "https://github.com/fereidani/kanal.git", rev = "125fb7876797f20c632b25660c2f41c2908f9007" }
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [ "default_fonts", "glow", "persistence" ] }
serde = { version = "1", features = ["derive"] }
confy = "0.3"
egui_memory_editor = "0.2"
rfd = "0.14"
macroquad = { git = "https://github.com/LLeny/macroquad.git", rev = "9fc8e6ec608b42cd72f88add7ceb751c351743ac" }
egui-macroquad = { git = "https://github.com/LLeny/egui-macroquad.git", rev = "f57a3fc284a53329898b86bf6989f067bd5a8ffb" }
rodio = "0.19"